candy guide: update icons

--- a/index.html
+++ b/index.html
@@ -375,10 +375,10 @@
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--match4" aria-hidden="true">
                                         <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M4 12h16" />
-                                            <rect x="5" y="8" width="3" height="3" rx="0.8" />
-                                            <rect x="10.5" y="8" width="3" height="3" rx="0.8" />
-                                            <rect x="16" y="8" width="3" height="3" rx="0.8" />
+                                            <rect x="3" y="9" width="4" height="4" rx="0.9" />
+                                            <rect x="8" y="9" width="4" height="4" rx="0.9" />
+                                            <rect x="13" y="9" width="4" height="4" rx="0.9" />
+                                            <rect x="18" y="9" width="4" height="4" rx="0.9" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
@@ -391,7 +391,11 @@
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--match5" aria-hidden="true">
                                         <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M12 4l2.5 5 5.5.8-4 3.9 1 5.6-5-2.7-5 2.7 1-5.6-4-3.9 5.5-.8z" />
+                                            <rect x="2" y="9" width="3" height="4" rx="0.9" />
+                                            <rect x="6" y="9" width="3" height="4" rx="0.9" />
+                                            <rect x="10" y="9" width="3" height="4" rx="0.9" />
+                                            <rect x="14" y="9" width="3" height="4" rx="0.9" />
+                                            <rect x="18" y="9" width="3" height="4" rx="0.9" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
@@ -402,15 +406,34 @@
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match-lt" aria-hidden="true">
+                                    <span class="tutorial__item-icon tutorial__item-icon--match-l" aria-hidden="true">
                                         <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M7 6v12h10" />
-                                            <path d="M12 6h5" />
+                                            <rect x="6" y="6" width="4" height="4" rx="0.9" />
+                                            <rect x="6" y="10" width="4" height="4" rx="0.9" />
+                                            <rect x="6" y="14" width="4" height="4" rx="0.9" />
+                                            <rect x="10" y="14" width="4" height="4" rx="0.9" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.ltTitle">L or T</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.matches.ltText">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.lTitle">L Match</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.matches.lText">
+                                            Creates a medium blast bomb.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--match-t" aria-hidden="true">
+                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <rect x="5" y="6" width="4" height="4" rx="0.9" />
+                                            <rect x="10" y="6" width="4" height="4" rx="0.9" />
+                                            <rect x="15" y="6" width="4" height="4" rx="0.9" />
+                                            <rect x="10" y="10" width="4" height="4" rx="0.9" />
+                                            <rect x="10" y="14" width="4" height="4" rx="0.9" />
+                                        </svg>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.tTitle">T Match</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.matches.tText">
                                             Creates a medium blast bomb.
                                         </span>
                                     </div>
@@ -448,9 +471,7 @@
                             <ul class="tutorial__list" role="list">
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--hard" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <path d="M12 4l6 3v6c0 5-6 7-6 7s-6-2-6-7V7l6-3z" />
-                                        </svg>
+                                        <span class="tutorial__item-icon-core"></span>
                                     </span>
                                     <div class="tutorial__item-body">
                                         <span class="tutorial__item-title" data-i18n-key="tutorial.obstacles.hardTitle">
@@ -463,11 +484,7 @@
                                 </li>
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--chest" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="5" y="9" width="14" height="10" rx="2" />
-                                            <path d="M5 13h14" />
-                                            <path d="M9 9V7h6v2" />
-                                        </svg>
+                                        <span class="tutorial__item-icon-core"></span>
                                     </span>
                                     <div class="tutorial__item-body">
                                         <span class="tutorial__item-title" data-i18n-key="tutorial.obstacles.chestTitle">
@@ -481,15 +498,7 @@
                                 <li class="tutorial__item">
                                     <span class="tutorial__item-icon tutorial__item-icon--generator" aria-hidden="true">
                                         <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <circle cx="12" cy="12" r="3" />
-                                            <path d="M12 3v4" />
-                                            <path d="M12 17v4" />
-                                            <path d="M3 12h4" />
-                                            <path d="M17 12h4" />
-                                            <path d="M5.5 5.5l2.8 2.8" />
-                                            <path d="M15.7 15.7l2.8 2.8" />
-                                            <path d="M18.5 5.5l-2.8 2.8" />
-                                            <path d="M8.3 15.7l-2.8 2.8" />
+                                            <path d="M9 7h4a3 3 0 0 1 0 6H8a3 3 0 1 0 0 6h4" />
                                         </svg>
                                     </span>
                                     <div class="tutorial__item-body">
