candy guide: update icons

--- a/index.html
+++ b/index.html
@@ -463,85 +463,132 @@
                         <div class="tutorial__card">
                             <ul class="tutorial__list tutorial__list--compact" role="list">
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match4" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="3" y="9" width="4" height="4" rx="0.9" />
-                                            <rect x="8" y="9" width="4" height="4" rx="0.9" />
-                                            <rect x="13" y="9" width="4" height="4" rx="0.9" />
-                                            <rect x="18" y="9" width="4" height="4" rx="0.9" />
-                                        </svg>
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--line">💣</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--line">💣</span>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.fourTitle">Match 4</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.lineText">
-                                            Creates a line bomb.
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.lineLineTitle">Line bomb + Line bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
                                         </span>
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match5" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="2" y="9" width="3" height="4" rx="0.9" />
-                                            <rect x="6" y="9" width="3" height="4" rx="0.9" />
-                                            <rect x="10" y="9" width="3" height="4" rx="0.9" />
-                                            <rect x="14" y="9" width="3" height="4" rx="0.9" />
-                                            <rect x="18" y="9" width="3" height="4" rx="0.9" />
-                                        </svg>
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--line">💣</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--small">🧨</span>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.fiveTitle">Match 5</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.largeText">
-                                            Creates a large blast bomb.
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.lineSmallTitle">Line bomb + Small blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
                                         </span>
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match-l" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="6" y="6" width="4" height="4" rx="0.9" />
-                                            <rect x="6" y="10" width="4" height="4" rx="0.9" />
-                                            <rect x="6" y="14" width="4" height="4" rx="0.9" />
-                                            <rect x="10" y="14" width="4" height="4" rx="0.9" />
-                                            <rect x="14" y="14" width="4" height="4" rx="0.9" />
-                                        </svg>
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--line">💣</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--medium">💥</span>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.lTitle">L Match</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.mediumText">
-                                            Creates a medium blast bomb.
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.lineMediumTitle">Line bomb + Medium blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
                                         </span>
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match-t" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="5" y="6" width="4" height="4" rx="0.9" />
-                                            <rect x="10" y="6" width="4" height="4" rx="0.9" />
-                                            <rect x="15" y="6" width="4" height="4" rx="0.9" />
-                                            <rect x="10" y="10" width="4" height="4" rx="0.9" />
-                                            <rect x="10" y="14" width="4" height="4" rx="0.9" />
-                                        </svg>
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--line">💣</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--large">☢️</span>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.tTitle">T Match</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.mediumText">
-                                            Creates a medium blast bomb.
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.lineLargeTitle">Line bomb + Large blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
                                         </span>
                                     </div>
                                 </li>
                                 <li class="tutorial__item">
-                                    <span class="tutorial__item-icon tutorial__item-icon--match-square" aria-hidden="true">
-                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <rect x="6" y="6" width="5" height="5" rx="1" />
-                                            <rect x="13" y="6" width="5" height="5" rx="1" />
-                                            <rect x="6" y="13" width="5" height="5" rx="1" />
-                                            <rect x="13" y="13" width="5" height="5" rx="1" />
-                                        </svg>
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--small">🧨</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--small">🧨</span>
                                     </span>
                                     <div class="tutorial__item-body">
-                                        <span class="tutorial__item-title" data-i18n-key="tutorial.matches.squareTitle">Square (2x2)</span>
-                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.smallText">
-                                            Creates a small blast bomb.
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.smallSmallTitle">Small blast bomb + Small blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--small">🧨</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--medium">💥</span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.smallMediumTitle">Small blast bomb + Medium blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--small">🧨</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--large">☢️</span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.smallLargeTitle">Small blast bomb + Large blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--medium">💥</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--medium">💥</span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.mediumMediumTitle">Medium blast bomb + Medium blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--medium">💥</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--large">☢️</span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.mediumLargeTitle">Medium blast bomb + Large blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
+                                        </span>
+                                    </div>
+                                </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--combo" aria-hidden="true">
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--large">☢️</span>
+                                        <span class="tutorial__bomb-plus">+</span>
+                                        <span class="tutorial__bomb-icon tutorial__bomb-icon--large">☢️</span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.bombMatches.largeLargeTitle">Large blast bomb + Large blast bomb</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.bombMatches.comboText">
+                                            Combined blast effect.
                                         </span>
                                     </div>
                                 </li>
