update candy guide

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                                             Blocker generators
                                         </span>
                                         <span class="tutorial__item-text" data-i18n-key="tutorial.obstacles.generatorText">
-                                            Every few matches they create new hard candies nearby.
+                                            Every few matches they create new hard candies nearby. An adjacent match of the same color destroys them.
                                         </span>
                                     </div>
                                 </li>
