update lvl editor: remove cellOverwrites

--- a/level-editor/index.html
+++ b/level-editor/index.html
@@ -16,8 +16,8 @@
         <div class="editor__header-actions">
             <button class="editor__button" type="button" id="open-file">Open levels.json</button>
             <button class="editor__button editor__button--ghost" type="button" id="load-project">Load from project</button>
-            <button class="editor__button editor__button--primary" type="button" id="save-file">Save</button>
-            <button class="editor__button editor__button--ghost" type="button" id="save-as">Save as</button>
+            <button class="editor__button editor__button--primary" type="button" id="save-file">Save to project</button>
+            <button class="editor__button editor__button--ghost" type="button" id="save-as">Save levels.json</button>
         </div>
     </header>
 
