add shop sections

--- a/index.html
+++ b/index.html
@@ -257,7 +257,14 @@
                 </div>
                 <p class="shop__lead" data-i18n-key="shop.lead">Spend sugar coins on tactical advantages.</p>
                 <div id="shop-feedback" class="shop__feedback" aria-live="polite" hidden></div>
-                <div id="shop-items" class="shop__grid"></div>
+                <div class="shop__section">
+                    <h3 class="shop__section-title" data-i18n-key="shop.section.permanent">Permanent</h3>
+                    <div id="shop-items-permanent" class="shop__grid"></div>
+                </div>
+                <div class="shop__section">
+                    <h3 class="shop__section-title" data-i18n-key="shop.section.consumable">Consumable</h3>
+                    <div id="shop-items-consumable" class="shop__grid"></div>
+                </div>
             </div>
         </div>
     </div>
