--- a/index.html
+++ b/index.html
@@ -614,6 +614,29 @@
                         </div>
                     </section>
                     <section class="tutorial__section">
+                        <h2 class="tutorial__section-title" data-i18n-key="tutorial.section.specialCandies">Special candies</h2>
+                        <div class="tutorial__card">
+                            <ul class="tutorial__list" role="list">
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--shifting" aria-hidden="true">
+                                        <svg class="tutorial__item-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                            <path d="M4 8h7a4 4 0 1 1-4 6" />
+                                            <path d="M20 16h-7a4 4 0 1 1 4-6" />
+                                            <path d="M6.5 6.5l-2.5 2.5 2.5 2.5" />
+                                            <path d="M17.5 17.5l2.5-2.5-2.5-2.5" />
+                                        </svg>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.mechanics.shiftingTitle">Shifting candy</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.mechanics.shiftingText">
+                                            Changes color between moves and avoids creating instant matches.
+                                        </span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="tutorial__section">
                         <h2 class="tutorial__section-title" data-i18n-key="tutorial.section.mechanics">Game Mechanics</h2>
                         <div class="tutorial__card">
                             <p class="tutorial__section-lead" data-i18n-key="tutorial.mechanics.multiplierText">
