add guide entry hardening candy

--- a/index.html
+++ b/index.html
@@ -628,6 +628,17 @@
                                         </span>
                                     </div>
                                 </li>
+                                <li class="tutorial__item">
+                                    <span class="tutorial__item-icon tutorial__item-icon--hardening" aria-hidden="true">
+                                        <span class="tutorial__item-icon-core tutorial__item-icon-core--hardening"></span>
+                                    </span>
+                                    <div class="tutorial__item-body">
+                                        <span class="tutorial__item-title" data-i18n-key="tutorial.mechanics.hardeningTitle">Hardening candy</span>
+                                        <span class="tutorial__item-text" data-i18n-key="tutorial.mechanics.hardeningText">
+                                            Ignored turns build a thick border that turns it into hard candy.
+                                        </span>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </section>
