add auto hard candy goal on/off checkbox in level editor

--- a/level-editor/index.html
+++ b/level-editor/index.html
@@ -81,6 +81,10 @@
                         <span class="editor__label">Background</span>
                         <input class="editor__input" type="text" id="level-background" placeholder="Optional" />
                     </label>
+                    <label class="editor__toggle editor__toggle--field">
+                        <input type="checkbox" id="level-auto-hard-goal" />
+                        <span>Auto hard-candy goal</span>
+                    </label>
                 </div>
 
                 <div class="editor__section">
