fix chain multiplier icon: on android a rectangle was displayed

--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,10 @@
                 <div id="score-progress-fill" class="hud__progress-fill"></div>
                 <span id="hud-multiplier-progress-slot" class="hud__progress-multiplier-slot">
                     <span id="hud-multiplier" class="hud__multiplier">x1.00</span>
-                    <span id="hud-chain-modifier" class="hud__chain-modifier">🗲 0.00</span>
+                    <span id="hud-chain-modifier" class="hud__chain-modifier">
+                        <img class="hud__chain-modifier-icon" src="assets/images/electric_bolt.svg" alt="" aria-hidden="true">
+                        <span id="hud-chain-modifier-value" class="hud__chain-modifier-value">0.00 [0]</span>
+                    </span>
                 </span>
                 <span class="hud__progress-value">
                     <span id="score" class="hud__value-strong">0/300</span>
