add basic collectable and collectors

--- a/level-editor/index.html
+++ b/level-editor/index.html
@@ -105,6 +105,10 @@
                     </div>
                     <div class="editor__board editor__board--hidden" id="board-panel">
                         <div class="editor__palette" id="board-palette"></div>
+                        <div class="editor__collector">
+                            <div class="editor__collector-label">Collector columns</div>
+                            <div class="editor__collector-row" id="collector-row"></div>
+                        </div>
                         <div class="editor__board-grid" id="board-grid"></div>
                         <div class="editor__board-actions">
                             <button class="editor__button editor__button--ghost" type="button" id="clear-board">Clear board</button>
