--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,7 @@
                     <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span>
                 </div>
                 <div id="recording-board" class="recording-state__board" aria-live="polite"></div>
+                <div id="recording-collector-row" class="recording-state__collector-row" aria-hidden="true"></div>
             </div>
             <div class="recording-state__controls">
                 <button id="recording-prev" class="recording-state__control" type="button" data-i18n-key="recording.control.prev">
